# rusty_ecommerce

./: Cargo.toml  README.md  docker-compose.yml
adapters/: .env  Cargo.toml
adapters/diesel_migrations/2024-01-20-155603_create_order_items/: up.sql
adapters/migrations/: 20250704134131_create_customers_table.sql  20250704134203_create_orders_table.sql  20250704134212_create_orders_items_table.sql  20250730134557_create_outbox_messages_table.sql  20250902145221_add_processed_at_column_to_outbox_messages_table.sql
adapters/src/: common.rs  lib.rs  pg_customer_repository.rs  pg_order_repository.rs  schema.rs
adapters/src/diesel/: mod.rs  pg_customer_repository.rs  pg_order_repository.rs
adapters/src/kafka/: mod.rs
adapters/src/sqlx/: mod.rs  pg_common_repository.rs  pg_customer_repository.rs  pg_order_repository.rs  pg_outbox_message_repository.rs  pg_transactional_repository.rs
docs/: todo.md
domain/: Cargo.toml
domain/src/: lib.rs  repositories.rs  value_objects.rs
domain/src/entities/: customer.rs  mod.rs  order.rs  outbox.rs
domain/src/publishers/: mod.rs  outbox_publisher.rs
domain/src/repositories/: common_repository.rs  customer_repository.rs  mod.rs  order_repository.rs  outbox_repository.rs  transactional_repository.rs
domain/src/services/: customer_service.rs  mod.rs  order_service.rs  outbox_service.rs
migrations/2023-11-28-064050_create_customers/: up.sql
migrations/2023-11-28-100050_create_orders/: up.sql
outbox_processor/: Cargo.toml
outbox_processor/src/: main.rs
rest_api/: Cargo.toml  configuration.yaml  settings.yaml
rest_api/src/: configuration.rs  lib.rs  main.rs  settings.rs  startup.rs
rest_api/src/routes/: create_customer.rs  create_order.rs  health_check.rs  mod.rs
rest_api/tests/: health_check.rs
rest_api/tests/api/: create_customer.rs  create_order.rs  health_check.rs  helpers.rs  main.rs
src/: lib.rs  main.rs  schema.rs
src/adapter/: mod.rs  pg_customer_repository.rs  pg_order_repository.rs
src/domain/: entities.rs  mod.rs  repositories.rs  value_objects.rs
src/domain/entities/: customer.rs  order.rs  product.rs
src/domain/services/: order_service.rs
