[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
dotenvy = "0.15"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
async-trait = "0.1.88"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
