[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rest_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
adapters = { path = "../adapters" }
actix-web = "4"
serde = { version = "1.0.193", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }

[dev-dependencies]
reqwest = "0.11.22"
