[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rest_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
adapters = { path = "../adapters" }
actix-web = "4"
serde = { version = "1.0.193", features = ["derive"] }
config = "0.13.4"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dev-dependencies]
reqwest = "0.11.22"

[dev-dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
